<resources>
    <string name="app_name">AngryMooseAndroid</string>
    <string name="credits">This app was made by Łukasz Zarębski, known as TheLKL</string>
    <string name="help_text">Press a button to make your move. Your goal is to decrease the moose\'s health to 0 without dying yourself.  Moves: Attack - you attempt to throw a punch Kick - you try to kick the moose Leap - you throw yourself on the floor to evade an attack Dodge - you step to the side, doing a light dodge Throw dirt - you grab a handful of earth to chuck it at the beast\'s eyes  In the middle of the screen you\'ll find an event log. Use it to find out about mooses actions and their consequences Watch out! The beast can feast on wild berries to heal himself  Good luck!</string>
    <string name="moose_lower_head">The moose lowers it\'s head, pointing its antlers towards you</string>
    <string name="moose_roar">A terrifying roar spreads through the forest</string>
    <string name="moose_step_back">The animal takes a step back</string>
    <string name="moose_eat">The moose found some fresh berries</string>
    <string name="moose_pick_up">The beast raises his leg</string>
    <string name="moose_turn_around">The moose turns around</string>
    <string name="lower_head_throw_1">The beast is blinded and misses its charge</string>
    <string name="lower_head_throw_2">The moose is blinded and hits a tree</string>
    <string name="lower_head_throw_3">The dirt fails to blind the moose. It charges at you</string>
    <string name="lower_head_dodge_1">The dodge failed and the charging moose smashes into you</string>
    <string name="lower_head_dodge_2">Your dodge was successful, the beast charges past you</string>
    <string name="lower_head_dodge_3">The moose grazes you slightly as it charges beside you</string>
    <string name="lower_head_leap_1">You throw yourself on the ground but the moose tramples you anyway</string>
    <string name="lower_head_leap_2">The enemy charges, you hit the ground and hurt your ankle</string>
    <string name="lower_head_leap_3">The enemy charges, you hit the ground and hurt your arm</string>
    <string name="lower_head_leap_4">You successfully evade the charging moose</string>
    <string name="lower_head_leap_5">The charging moose hits a tree!</string>
    <string name="lower_head_kick_1">You manage to kick the moose before its charge</string>
    <string name="lower_head_kick_2">The moose charges at you, striking your chest</string>
    <string name="lower_head_attack_1">Somehow, you managed to do some damage</string>
    <string name="lower_head_attack_2">The moose charges at you, striking your chest</string>
    <string name="roar_throw_1">Your throw is ineffective, the moose hits you anyway</string>
    <string name="roar_throw_2">The moose is distracted by the dirt, you escape any harm</string>
    <string name="roar_dodge_1">You dodge the animal\'s attack</string>
    <string name="roar_dodge_2">The moose grazed your shoulder</string>
    <string name="roar_dodge_3">You dodge the moose\'s attack, but stumbled and hit your knee</string>
    <string name="roar_leap_1">You fall to the ground and the animal mangles you terribly</string>
    <string name="roar_leap_2">You fall to the ground needlessly and pay for it</string>
    <string name="roar_leap_3">You fall to the ground, but manage to recover before the moose does much damage</string>
    <string name="roar_kick_1">Your kick is too slow and the enemy attack lands</string>
    <string name="roar_kick_2">Your kick is unexpected and so the moose fails to react</string>
    <string name="roar_attack_1">You land a punch before the animal attacks</string>
    <string name="roar_attack_2">You both miss and stare at each other confused</string>
    <string name="roar_attack_3">Your hand gets stuck in antlers</string>
    <string name="step_back_throw_1">You throw some dirt at the moose. It\'s not very effective…</string>
    <string name="step_back_throw_2">Thanks to the defensive position, the moose foresaw your move</string>
    <string name="step_back_throw_3">Trying to shake off the dirt, the beast hits a tree</string>
    <string name="step_back_dodge_1">You both take a defensive stance. Awkward…</string>
    <string name="step_back_leap_1">You hit the ground and hurt your ankle</string>
    <string name="step_back_leap_2">You hit the ground and hurt your arm</string>
    <string name="step_back_leap_3">You hit the ground as the moose takes a defensive stance</string>
    <string name="step_back_kick_1">The moose\'s defensive stance fails to stop you</string>
    <string name="step_back_kick_2">The moose\'s defensive stance allows him to counter</string>
    <string name="step_back_attack_1">The moose\'s defensive stance fails to stop you</string>
    <string name="step_back_attack_2">The moose\'s defensive stance allows him to counter</string>
    <string name="eat_throw_1">You throw dirt at an eating moose. Rude.</string>
    <string name="eat_throw_2">The dirt lands in the berries and destroys the meal. The moose will remember this</string>
    <string name="eat_dodge_1">You step back, allowing the moose to eat peacefully. He smiles in gratitude</string>
    <string name="eat_dodge_2">You allow the animal to find even more berries. How nice!</string>
    <string name="eat_leap_1">You drop to the ground and allow the moose to eat his berries</string>
    <string name="eat_leap_2">You hit the ground, hurting your ankle as the moose eats</string>
    <string name="eat_leap_3">You hit the ground, hurting your arm as the moose eats</string>
    <string name="eat_leap_4">You drop to the ground, which lets the animal find even more berries</string>
    <string name="eat_kick_1">You steal the berries and eat them</string>
    <string name="eat_kick_2">You take advantage of the distraction and land a blow</string>
    <string name="eat_kick_3">You miss and allow the moose to eat his berries</string>
    <string name="eat_kick_4">You manage to deny the meal</string>
    <string name="eat_kick_5">You try to take the berries, but that makes the animal very mad</string>
    <string name="eat_attack_1">You steal the berries and eat them</string>
    <string name="eat_attack_2">You miss and allow the moose to eat his berries</string>
    <string name="eat_attack_3">You take advantage of the situation, but the berries get lost in the tumble</string>
    <string name="eat_attack_4">You try to take the berries, but that makes the animal very mad</string>
    <string name="pick_up_throw_1">Confused moose hits his head on a branch</string>
    <string name="pick_up_throw_2">The moose kicks dirt into your eyes, you can\'t see</string>
    <string name="pick_up_throw_3">The moose kicks dirt into your eyes as you throw some into his. You both take a moment</string>
    <string name="pick_up_dodge_1">The moose kicks dirt into the air, but you dodge it gracefully</string>
    <string name="pick_up_dodge_2">The moose kicks dirt into your eyes, you stumble and fall</string>
    <string name="pick_up_dodge_3">The moose kicks dirt into your eyes, you can\'t see</string>
    <string name="pick_up_leap_1">You dodge the attack, but hurt your ankle</string>
    <string name="pick_up_leap_2">You dodge the attack, but hurt your arm</string>
    <string name="pick_up_leap_3">You hit the ground as the moose kicks dirt at you</string>
    <string name="pick_up_kick_1">The fiend kicks dirt at your eyes, and counters your attack</string>
    <string name="pick_up_kick_2">Despite the dirt kicked at your eyes you manage to do some damage</string>
    <string name="pick_up_attack_1">The fiend kicks dirt at your eyes, and counters your attack</string>
    <string name="pick_up_attack_2">Despite the dirt kicked at your eyes you manage to do some damage</string>
    <string name="turn_around_throw_1">You throw dirt at its butt. It doesn\'t care and kicks your face</string>
    <string name="turn_around_throw_2">You throw dirt at its butt and get kicked in stomach</string>
    <string name="turn_around_throw_3">You throw dirt at its butt and get kicked in your arm</string>
    <string name="turn_around_dodge_1">Your dodge wasn\'t enough, you get kicked in chest</string>
    <string name="turn_around_dodge_2">You stumbled and fell, but you dodged the kick</string>
    <string name="turn_around_dodge_3">Somehow you manage to dodge the kick</string>
    <string name="turn_around_leap_1">You successfully evade the kick</string>
    <string name="turn_around_leap_2">You evaded the kick, but hit a rock on the ground</string>
    <string name="turn_around_leap_3">The beast misses and hits a rock</string>
    <string name="turn_around_leap_4">You dodge the kick, but hurt your ankle</string>
    <string name="turn_around_leap_5">You dodge the kick, but hurt your arm</string>
    <string name="turn_around_kick_1">Your unexpected assault brings results</string>
    <string name="turn_around_kick_2">You try to kick the moose, but get stopped by a kick to the chest</string>
    <string name="turn_around_kick_3">You try to kick the moose, but get stopped by a kick to the shoulder</string>
    <string name="turn_around_kick_4">You land a kick as the beast\'s hoof grazes your shoulder</string>
    <string name="turn_around_attack_1">You try to punch the animal, but get kicked in the head instead</string>
    <string name="turn_around_attack_2">You landed a fortunate blow, before the beast could react</string>
    <string name="initial_log">A huge moose is standing in front of you</string>
    <string name="surrender_question">Do you want to give up?</string>
    <string name="surrender_ok">Surrender to a moose</string>
    <string name="surrender_no">Keep fighting!</string>
    <string name="surrender_score">You ran away like a baby</string>
    <string name="surrender_score_last_event">The moose will laugh about you with his friends</string>
    <string name="timeattack_score_out_of_time">You ran out of time</string>
    <string name="outcome_tie">IT\'S A TIE</string>
    <string name="outcome_victory">YOU WON</string>
    <string name="outcome_loss">YOU LOST</string>
    <string name="play">PLAY</string>
    <string name="help">Help</string>
    <string name="time_attack">Time Attack</string>
    <string name="options">OPTIONS</string>
    <string name="vibration_on">VIBRATION ON</string>
    <string name="vibration_off">VIBRATION OFF</string>
    <string name="music_on">MUSIC ON</string>
    <string name="music_off">MUSIC OFF</string>
    <string name="sound_on">SOUND ON</string>
    <string name="sound_off">SOUND OFF</string>
    <string name="fight_again">Fight again</string>
    <string name="share">Share</string>
    <string name="back_to_play">Back to Play</string>
    <string name="attack">Attack</string>
    <string name="kick">Kick</string>
    <string name="leap">Leap</string>
    <string name="dodge">Dodge</string>
    <string name="throw_dirt">Throw dirt</string>
    <plurals name="timeattack_score">
        <item quantity="one">You had one second left</item>
        <item quantity="other">You had %d seconds left</item>
    </plurals>
    <plurals name="standard_score_loss">
        <item quantity="one">You survived one turn</item>
        <item quantity="other">You survived %d turns</item>
    </plurals>
    <plurals name="standard_score_victory">
        <item quantity="one">You won in one turn!</item>
        <item quantity="other">You won in %d turns</item>
    </plurals>

</resources>
