<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/optionsText"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:text="@string/options"
            android:textSize="70sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:gravity="center"
            />

        <ToggleButton
            android:id="@+id/toggleVibration"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:textOn="@string/vibration_on"
            android:textOff="@string/vibration_off"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            />

        <ToggleButton
            android:id="@+id/toggleMusic"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:textOn="@string/music_on"
            android:textOff="@string/music_off"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            />


        <ToggleButton
            android:id="@+id/toggleSound"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:textOn="@string/sound_on"
            android:textOff="@string/sound_off"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="40dp"
            />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>