<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:id="@+id/playLayout"
    android:clickable="true"
    android:focusable="true">


    <TextView
        android:id="@+id/playText"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="5"
        android:gravity="center"
        android:lineSpacingMultiplier="0.8"
        android:text="@string/play"
        android:textColor="@color/colorText"
        android:textSize="70sp"
        android:textStyle="bold" />

    <!-- TODO: page indicator?
         TODO: get rid of white ripple on edge -->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/buttonPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="4">

        <Button
            android:id="@+id/helpButton"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:text="@string/help"
            android:layout_weight="1"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="helpPressed"/>

        <ToggleButton
            android:id="@+id/timeButton"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:textOn="@string/time_attack"
            android:textOff="@string/time_attack"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="timePressed"/>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>