<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">


    <TextView
        android:id="@+id/outcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="YOU\nLOST"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:textSize="70sp"
        android:textStyle="bold"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/lastEventText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Something terrible has happened and you won or lost or tied"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/turnText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="You survived X turns"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="5"
        android:paddingTop="45dp"
        android:paddingBottom="45dp">

        <Button
            android:id="@+id/retryButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fight_again"
            android:onClick="retryPressed"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/shareButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/share"
            android:onClick="sharePressed"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back_to_play"
            android:onClick="backPressed"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>