<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fightScreen">

    <ProgressBar
        android:id="@+id/mooseHealthBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:progress="100"/>

    <ProgressBar
        android:id="@+id/playerHealthBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        android:progress="100" />

    <!-- TODO: small scrollbar-->
    <TextView
        android:id="@+id/logText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorText"
        android:gravity="bottom"
        />

    <TableLayout
        android:id="@+id/controlsTableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/attackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="bottom"
                android:text="@string/attack"
                android:onClick="attackPressed"/>

            <Button
                android:id="@+id/kickButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kick"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:onClick="kickPressed"
                android:layout_gravity="bottom"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/leapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leap"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:layout_gravity="center_vertical"
                android:onClick="leapPressed"/>

            <Button
                android:id="@+id/dodgeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dodge"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:onClick="dodgePressed"
                android:layout_gravity="center_vertical"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/throwButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/throw_dirt"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="15dp"
                android:onClick="throwPressed"/>

            <Button
                android:id="@+id/dummyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:visibility="invisible"/>
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="180dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="280dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="400dp" />

    <TextView
        android:id="@+id/middleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="0" />

    <fragment
        android:name="com.example.thelkl321.angrymooseandroid.fight.EndgameFragment"
        android:id="@+id/endgameFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>